--- a/posts/package.json
+++ b/posts/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "^0.7.0",
+    "amqplib": "^0.10.1",
     "colors.ts": "^1.0.20",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/amqplib": "^0.8.2",
     "@types/node": "^18.0.5",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
