--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,42 @@ services:
     image: rabbitmq:3-management
     restart: always
     volumes:
-      - "/data/dvolumes/spot-trade/dockerrabbit:/var/lib/rabbitmq"
+      - "/data/dvolumes/microservices/dockerrabbit:/var/lib/rabbitmq"
     networks:
       - my_network
+  users_s:
+    ports:
+      - "0.0.0.0:3002:3002"
+    container_name: users_c
+    restart: always
+    build: ./users/
+    env_file: ./config/users.env
+    environment:
+      - NODE_ENV=stage
+    networks:
+      my_network:
+        ipv4_address: 20.10.11.4  
+  posts_s:
+    ports:
+      - "0.0.0.0:3001:3001"
+    container_name: posts_c
+    restart: always
+    build: ./posts/
+    env_file: ./config/posts.env
+    environment:
+      - NODE_ENV=stage 
+    networks:
+      my_network:
+        ipv4_address: 20.10.11.3
+  gateway_s:
+    ports:
+      - "0.0.0.0:8081:8081"
+    container_name: gateway_c
+    restart: always
+    build: ./gateway_service/  
+    networks:
+      my_network:
+        ipv4_address: 20.10.11.2    
 networks:
   my_network:
     driver: bridge
@@ -19,23 +52,5 @@ networks:
       com.docker.network.enable_ipv6: "false"
     ipam:
       config:
-        - subnet: 30.10.11.0/16
-          gateway: 30.10.11.1      
-  # users_s:
-  #   ports:
-  #     - "0.0.0.0:3002:3002"
-  #   container_name: users_c
-  #   restart: always
-  #   build: ./users/
-  #   env_file: ./config/users.env
-  #   environment:
-  #     - NODE_ENV=stage
-  # posts_s:
-  #   ports:
-  #     - "0.0.0.0:3001:3001"
-  #   container_name: posts_c
-  #   restart: always
-  #   build: ./posts/
-  #   env_file: ./config/posts.env
-  #   environment:
-  #     - NODE_ENV=stage            
+        - subnet: 20.10.11.0/16
+          gateway: 20.10.11.1            
