--- a/gateway_service/Dockerfile
+++ b/gateway_service/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14
+FROM node:14.20.0-alpine3.16
 RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 WORKDIR /home/node/app
 COPY package*.json ./
