--- a/users/package.json
+++ b/users/package.json
@@ -18,11 +18,14 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "grpc": "^1.24.11",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "redis": "^3.1.2"
+
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/amqplib": "^0.8.2",
+    "@types/redis": "^2.8.32",
     "@types/node": "^18.0.5",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
